tests/ui/hygiene/missing-self-diag.stderr
error[E0424]: expected value, found module `self`
  --> $DIR/missing-self-diag.rs:10:9
   |
LL | / macro_rules! call_bar {
LL | |     () => {
LL | |         self.bar();
   | |         ^^^^ `self` value is a keyword only available in methods with a `self` parameter
LL | |     }
LL | | }
   | |_- in this expansion of `call_bar!`
...
LL | /     pub fn foo(&self) {
LL | |         call_bar!();
   | |         ----------- in this macro invocation
LL | |     }
   | |_____- this function has a `self` parameter, but a macro invocation can only access identifiers it receives from parameters

error: aborting due to previous error

For more information about this error, try `rustc --explain E0424`.
